crates/kply-cli/tests/snapshots/cli__config_validate_invalid_quiet.snap
---
source: crates/kply-cli/tests/cli.rs
expression: stderr
---
kply error: config validation

apps[0].workload: field is required
