crates/kply-cli/tests/snapshots/cli__config_validate_invalid_text.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 226
expression: stderr
---
kply error: config validation

apps[0].name: field is required
