crates/kply-cli/tests/snapshots/cli__config_validate_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 189
expression: value
---
{
  "errors": [],
  "status": "valid"
}
