crates/kply-cli/tests/snapshots/cli__config_validate_text.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 174
expression: output
---
kply config validate
Config is valid.
