crates/kply-cli/tests/snapshots/cli__demo_doctor_missing_tools.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stdout)
---
kply demo doctor
status: blocked
checks: 10
  ok: demo_config -> fixtures/demo/ecommerce-basic/kply.yaml
  ok: demo_manifest -> fixtures/demo/ecommerce-basic/manifests/namespace.yaml
  ok: demo_manifest -> fixtures/demo/ecommerce-basic/manifests/frontend.yaml
  ok: demo_manifest -> fixtures/demo/ecommerce-basic/manifests/backend.yaml
  ok: demo_manifest -> fixtures/demo/ecommerce-basic/manifests/backend-broken.yaml
  ok: demo_manifest -> fixtures/demo/ecommerce-basic/manifests/backend-fixed.yaml
  ok: demo_manifest -> fixtures/demo/ecommerce-basic/manifests/catalog.yaml
  missing: kind -> missing one of: kind
  missing: kubectl -> missing one of: kubectl
  missing: container_runtime -> missing one of: docker, podman, nerdctl
