crates/kply-cli/tests/snapshots/cli__demo_install_kubectl_failure.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 342
expression: normalize_output(&output)
---
kply error: demo install

kubectl exited with status 7
command: kubectl apply -f <absolute-path>
stderr: fake kubectl
