crates/kply-cli/tests/snapshots/cli__demo_install_missing_kubectl.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 377
expression: normalize_output(&output)
---
kply error: demo install

kubectl was not found on PATH
command: kubectl
